--- a/public/css/main.css
+++ b/public/css/main.css
@@ -64,13 +64,14 @@ body {
 mark {
 	background-color: transparent;
 	color: inherit;
-}
+}*/
 
-input::-moz-focus-inner {
+/* input::-moz-focus-inner {
 	border: 0;
 	padding: 0;
-}
+} */
 
+/*
 input, select, textarea {
 	-moz-appearance: none;
 	-webkit-appearance: none;
@@ -256,12 +257,9 @@ input, select, textarea {
 		border: 0;
 		border-bottom: solid 2px #fff;
 		margin: 3em 0;
-	}
+	}*/
 
-		hr.major {
-			margin: 4.5em 0;
-		}
-
+/*
 	blockquote {
 		border-left: solid 4px #fff;
 		font-style: italic;
@@ -1795,6 +1793,7 @@ input, select, textarea {
 		font-size: 0.9em;
 	}
 
+	*/
 	header.major {
 		margin: 0 0 3.5em 0;
 	}
@@ -2065,8 +2064,8 @@ input, select, textarea {
 		.icon.brands:before {
 			font-family: 'Font Awesome 5 Brands';
 		}
-
-		.icon.major {
+*/
+		/* .icon.major {
 			-moz-transform: rotate(-45deg);
 			-webkit-transform: rotate(-45deg);
 			-ms-transform: rotate(-45deg);
@@ -2108,7 +2107,7 @@ input, select, textarea {
 
 		.icon.style3 {
 			color: #76ddff;
-		}
+		} */
 
 /* Image */
 
@@ -2567,11 +2566,11 @@ table thead {
 				line-height: 3.75em;
 			}
 
-		} */
+		}
 
 /* Features */
  
-	 .features {
+	 /* .features {
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
@@ -2587,17 +2586,17 @@ table thead {
 		list-style: none;
 		padding: 0;
 		width: 100%;
-	} */
+	}  */
 
-		.features li {
+		/* .features li {
 			padding: 4em 4em 2em 6em ;
 			display: block;
 			position: relative;
 			text-align: left;
 			width: 50%;
-		} 
+		}  */
 
-			.features li:nth-child(1) {
+			/* .features li:nth-child(1) {
 				background-color: rgba(0, 0, 0, 0.035);
 			}
 
@@ -2635,17 +2634,17 @@ table thead {
 
 			.features li:nth-child(10) {
 				background-color: rgba(0, 0, 0, 0.35);
-			}
+			} */
 
-			.features li:before {
+			/* .features li:before {
 				display: block;
 				position: absolute;
 				left: 1.75em;
 				top: 2.75em;
 				font-size: 1.5em;
-			}
+			} */
 
-			.features li:nth-child(1) {
+			/* .features li:nth-child(1) {
 				border-top-left-radius: 3px;
 			}
 
@@ -2659,7 +2658,7 @@ table thead {
 
 			.features li:nth-last-child(2) {
 				border-bottom-left-radius: 3px;
-			} 
+			}  */
 
 		  @media screen and (max-width: 980px) {
 
@@ -2839,9 +2838,9 @@ table thead {
 
 /* Wrapper */
 
-	.wrapper {
+	/* .wrapper {
 		padding: 6em 0 4em 0 ;
-	}
+	} */
 
 		.wrapper > .inner {
 			width: 60em;
@@ -2895,8 +2894,8 @@ table thead {
 
 			.wrapper.style1 header p {
 				color: #a6e0db;
-			}
-
+			} */
+/*
 			.wrapper.style1 header.major h2, .wrapper.style1 header.major h3, .wrapper.style1 header.major h4, .wrapper.style1 header.major h5, .wrapper.style1 header.major h6 {
 				border-color: rgba(0, 0, 0, 0.125);
 			}
@@ -3031,45 +3030,45 @@ table thead {
 			background-color: #2e3842;
 		}*/
 
-		.wrapper.style3 {
-			background-color: #505393;
-			color: #d3d4e4;
+		/* .wrapper.style3 {
+			background-color: white;
+			color: black;
 		}
 
 			.wrapper.style3 strong, .wrapper.style3 b {
-				color: #ffffff;
+				color: black;
 			}
 
 			.wrapper.style3 h2, .wrapper.style3 h3, .wrapper.style3 h4, .wrapper.style3 h5, .wrapper.style3 h6 {
-				color: #ffffff;
+				color: black;
 			}
 
 			.wrapper.style3 hr {
-				border-color: rgba(0, 0, 0, 0.125);
+				border-color: black;
 			}
 
 			.wrapper.style3 blockquote {
-				border-color: rgba(0, 0, 0, 0.125);
+				border-color: black;
 			}
 
 			.wrapper.style3 code {
-				background: rgba(255, 255, 255, 0.075);
+				background: black;
 			}
 
 			.wrapper.style3 header p {
-				color: #b9bad4;
+				color: black;
 			}
 
 			.wrapper.style3 header.major h2, .wrapper.style3 header.major h3, .wrapper.style3 header.major h4, .wrapper.style3 header.major h5, .wrapper.style3 header.major h6 {
-				border-color: rgba(0, 0, 0, 0.125);
+				border-color: black;
 			}
 
 			.wrapper.style3 header.major p {
-				color: #d3d4e4;
+				color: black;
 			}
 
 			.wrapper.style3 label {
-				color: #ffffff;
+				color: black;
 			}
 
 			.wrapper.style3 input[type="text"],
@@ -3085,76 +3084,76 @@ table thead {
 			}
 
 				.wrapper.style3 select option {
-					color: #ffffff;
-					background: #505393;
+					color: black;
+					background: grey;
 				}
 
 			.wrapper.style3 input[type="checkbox"] + label,
 			.wrapper.style3 input[type="radio"] + label {
-				color: #d3d4e4;
+				color: black;
 			}
 
 				.wrapper.style3 input[type="checkbox"] + label:before,
 				.wrapper.style3 input[type="radio"] + label:before {
-					background: rgba(255, 255, 255, 0.075);
+					background: grey;
 				}
 
 			.wrapper.style3 input[type="checkbox"]:checked + label:before,
 			.wrapper.style3 input[type="radio"]:checked + label:before {
-				background: #ffffff;
-				color: #505393;
+				background: black;
+				color: grey;
 			}
 
 			.wrapper.style3 ::-webkit-input-placeholder {
-				color: #b9bad4 !important;
+				color: black !important;
 			}
 
 			.wrapper.style3 :-moz-placeholder {
-				color: #b9bad4 !important;
+				color: grey !important;
 			}
 
 			.wrapper.style3 ::-moz-placeholder {
-				color: #b9bad4 !important;
+				color: grey !important;
 			}
 
 			.wrapper.style3 :-ms-input-placeholder {
-				color: #b9bad4 !important;
+				color: grey !important;
 			}
 
 			.wrapper.style3 .formerize-placeholder {
-				color: #b9bad4 !important;
+				color: grey !important;
 			}
 
 			.wrapper.style3 .icon.major {
-				border-color: rgba(0, 0, 0, 0.125);
+				border-color: black;
 			}
 
 			.wrapper.style3 ul.alt li {
-				border-color: rgba(0, 0, 0, 0.125);
+				border-color: black;
 			}
 
 			.wrapper.style3 table tbody tr {
-				border-color: rgba(0, 0, 0, 0.125);
+				border-color: black;
 			}
 
 				.wrapper.style3 table tbody tr:nth-child(2n + 1) {
-					background-color: rgba(255, 255, 255, 0.075);
+					background-color: grey;
 				}
 
 			.wrapper.style3 table th {
-				color: #ffffff;
+				color: white;
 			}
 
 			.wrapper.style3 table thead {
-				border-color: rgba(0, 0, 0, 0.125);
+				border-color: black;
 			}
 
 			.wrapper.style3 table tfoot {
-				border-color: rgba(0, 0, 0, 0.125);
+				border-color: black;
 			}
 
 			.wrapper.style3 table.alt tbody tr td {
-				border-color: rgba(0, 0, 0, 0.125);
+				border-color: black;
 			}
 
 			.wrapper.style3 input[type="submit"],
@@ -3162,8 +3161,8 @@ table thead {
 			.wrapper.style3 input[type="button"],
 			.wrapper.style3 button,
 			.wrapper.style3 .button {
-				box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.125);
-				color: #ffffff;
+				box-shadow: inset 0 0 0 2px black;
+				color: white;
 			}
 
 				.wrapper.style3 input[type="submit"]:hover,
@@ -3171,7 +3170,7 @@ table thead {
 				.wrapper.style3 input[type="button"]:hover,
 				.wrapper.style3 button:hover,
 				.wrapper.style3 .button:hover {
-					background-color: rgba(255, 255, 255, 0.075);
+					background-color: grey;
 				}
 
 				.wrapper.style3 input[type="submit"]:active,
@@ -3179,16 +3178,16 @@ table thead {
 				.wrapper.style3 input[type="button"]:active,
 				.wrapper.style3 button:active,
 				.wrapper.style3 .button:active {
-					background-color: rgba(255, 255, 255, 0.2);
-				}
+					background-color: grey;
+				} */
 
-			@media screen and (max-width: 736px) {
+			/* @media screen and (max-width: 736px) {
 
 				.wrapper.style3 .features li {
-					border-top-color: rgba(0, 0, 0, 0.125);
+					border-top-color: black;
 				}
 
-			}
+			} */
 /*
 		.wrapper.style4 {
 			background-color: transparent;
@@ -3353,7 +3352,7 @@ table thead {
 
 			}*/
 
-		@media screen and (max-width: 980px) {
+		/* @media screen and (max-width: 980px) {
 
 			.wrapper {
 				padding: 4em 3em 2em 3em ;
@@ -3367,7 +3366,7 @@ table thead {
 				padding: 3em 2em 1em 2em ;
 			}
 
-		}
+		} */
 
 /* Page Wrapper + Menu */
 
@@ -3379,18 +3378,6 @@ table thead {
 		opacity: 1;
 		padding-top: 3em;
 	} */
-
-		#page-wrapper:before {
-			content: '';
-			display: block;
-			display: none;
-			height: 100%;
-			left: 0;
-			position: fixed;
-			top: 0;
-			width: 100%;
-			z-index: 10001;
-		}
 
 	#menu {
 		-moz-transform: translateX(20em);
@@ -3862,7 +3849,7 @@ table thead {
 					width: 100%;
 				}
 
-		}
+		} */
 
 		@media screen and (max-width: 736px) {
 
@@ -3870,7 +3857,7 @@ table thead {
 				max-width: none;
 			}
 
-		} */
+		}
 
 /* Main */
 
