--- a/public/css/profilepic.css
+++ b/public/css/profilepic.css
@@ -214,3 +214,259 @@ input {
         }
 
     }
+    header.major {
+		margin: 0 0 3.5em 0;
+	}
+
+		header.major h2, header.major h3, header.major h4, header.major h5, header.major h6 {
+			border-bottom: solid 2px #fff;
+			display: inline-block;
+			padding-bottom: 1em;
+			position: relative;
+		}
+
+			header.major h2:after, header.major h3:after, header.major h4:after, header.major h5:after, header.major h6:after {
+				content: '';
+				display: block;
+				height: 1px;
+			}
+
+		header.major p {
+			color: #fff;
+			top: 0;
+		}
+
+		@media screen and (max-width: 736px) {
+
+			header.major {
+				margin: 0 0 2em 0;
+			}
+
+		}
+
+	@media screen and (max-width: 980px) {
+
+		header br {
+			display: none;
+		}
+
+	}
+    #header {
+		/* -moz-transition: background-color 0.2s ease;
+		-webkit-transition: background-color 0.2s ease;
+		-ms-transition: background-color 0.2s ease;
+		transition: background-color 0.2s ease; */
+		background: black;
+		height: 3.5em;
+		left: 0;
+		line-height: 3.5em;
+		position: fixed;
+		top: 0;
+		width: 100%;
+		z-index: 10000;
+	}
+
+		#header h1 {
+			font-size: 4rem;
+			/* -moz-transition: opacity 0.2s ease;
+			-webkit-transition: opacity 0.2s ease;
+			-ms-transition: opacity 0.2s ease;
+			transition: opacity 0.2s ease; */
+			height: inherit;
+			left: 1em;
+			line-height: inherit;
+			position: absolute;
+			top: 0;
+		}
+
+			#header h1 a {
+				border: 0;
+				display: block;
+				height: inherit;
+				line-height: inherit;
+			}
+
+				@media screen and (max-width: 736px) {
+
+					#header h1 a {
+						font-size: 0.75em;
+					}
+
+				}
+
+				@media screen and (max-width: 500px) {
+
+					#header nav > ul > li > a.menuToggle span {
+						display: none;
+					}
+
+				}
+
+				@media screen and (max-width: 350px) {
+
+					#header h1 {
+						left: 1rem;
+					}
+
+				}
+
+		#header nav {
+			height: inherit;
+			line-height: inherit;
+			position: absolute; 
+			right: 0;
+			top: 0;
+		}
+
+			#header nav > ul {
+				list-style: none;
+				margin: 0;
+				padding: 0;
+				white-space: nowrap;
+			}
+
+				#header nav > ul > li {
+					display: inline-block;
+					padding: 0;
+				}
+
+					#header nav > ul > li > a {
+						border: 0;
+						color: white;
+						display: block;
+						font-size: 0.8em;
+						letter-spacing: 0.225em;
+						padding: 0 1.5em;
+						text-transform: uppercase;
+					}
+
+						#header nav > ul > li > a.menuToggle {
+							outline: 0;
+							position: relative;
+						} 
+
+							 #header nav > ul > li > a.menuToggle:after {
+								background-position: right center;
+								background-repeat: no-repeat;
+								content: '';
+								display: inline-block;
+								height: 3.75em;
+								vertical-align: top;
+								width: 2em;
+							}
+
+							@media screen and (max-width: 736px) {
+
+								#header nav > ul > li > a.menuToggle {
+									padding: 0 1.5em;
+								}
+
+							}
+
+						@media screen and (max-width: 736px) {
+
+							#header nav > ul > li > a {
+								padding: 0 0 0 1.5em;
+							}
+
+						}
+
+					#header nav > ul > li:first-child {
+						margin-left: 0;
+					}
+                    #menu {
+                        -moz-transform: translateX(20em);
+                        -webkit-transform: translateX(20em);
+                        -ms-transform: translateX(20em);
+                        transform: translateX(20em);
+                        -moz-transition: -moz-transform 0.5s ease;
+                        -webkit-transition: -webkit-transform 0.5s ease;
+                        -ms-transition: -ms-transform 0.5s ease;
+                        transition: transform 0.5s ease;
+                        -webkit-overflow-scrolling: touch;
+                        background: black;
+                        color: white;
+                        height: 100%;
+                        max-width: 80%;
+                        overflow-y: auto;
+                        padding: 3em 2em;
+                        position: fixed;
+                        right: 0;
+                        top: 0;
+                        width: 20em;
+                        z-index: 10002;
+                    }
+                
+                        #menu ul {
+                            list-style: none;
+                            padding: 0;
+                        }
+                
+                            #menu ul > li {
+                                border-top: solid 1px white;
+                                margin: 0.5em 0 0 0;
+                                padding: 0.5em 0 0 0;
+                            }
+                
+                                #menu ul > li:first-child {
+                                    border-top: 0 !important;
+                                    margin-top: 0 !important;
+                                    padding-top: 0 !important;
+                                }
+                
+                                #menu ul > li > a {
+                                    border: 0;
+                                    color: inherit;
+                                    display: block;
+                                    font-size: 0.8em;
+                                    letter-spacing: 0.225em;
+                                    outline: 0;
+                                    text-decoration: none;
+                                    text-transform: uppercase;
+                                }
+                
+                                    @media screen and (max-width: 736px) {
+                
+                                        #menu ul > li > a {
+                                            line-height: 3em;
+                                        }
+                
+                                    }
+                
+                        #menu .close {
+                            /* background-image: url("images/close.svg"); */
+                            background-position: 4.85em 1em;
+                            background-repeat: no-repeat;
+                            border: 0;
+                            cursor: pointer;
+                            display: block;
+                            height: 3em;
+                            position: absolute;
+                            right: 0;
+                            top: 0;
+                            width: 7em;
+                        }
+                
+                        @media screen and (max-width: 736px) {
+                
+                            #menu {
+                                padding: 3em 1.5em;
+                            }
+                
+                        }
+                
+                    body.is-menu-visible #page-wrapper {
+                        opacity: 0.35;
+                    }
+                
+                        body.is-menu-visible #page-wrapper:before {
+                            display: block;
+                        }
+                
+                    body.is-menu-visible #menu {
+                        -moz-transform: translateX(0);
+                        -webkit-transform: translateX(0);
+                        -ms-transform: translateX(0);
+                        transform: translateX(0);
+                    }
+                
