--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,14 +11,14 @@
 <body>
   <!-- Header -->
   <header id="header" class="alt">
-    <h1><a href="/landingpage">Petopia</a></h1>
+    <h1><a href="/">Petopia</a></h1>
     <nav id="nav">
       <ul>
         <li class="special">
           <a href="#menu" class="menuToggle"><span>Menu</span></a>
           <div id="menu">
             <ul>
-              <li><a href="/landingpage">Home</a></li>
+              <li><a href="/">Home</a></li>
               <li><a href="/hotels">Pet Hotel</a></li>
               <li><a href="/spas">Pet Spa</a></li>
               <li><a href="/login">Log In</a></li>
