--- a/views/hotels.handlebars
+++ b/views/hotels.handlebars
@@ -25,7 +25,7 @@
     <!-- Two -->
     <section id="two" class="wrapper alt style2">
         <section class="spotlight">
-            <div class="image"><img src="./images/unsplash-image-s9Tf1eBDFqw.jpg" alt="" /></div><div class="content">
+            <div class="image"><img src="./images/unsplash-image-s9Tf1eBDFqw.jpg" alt="Dog lying in pet bed surrounded by plants" /></div><div class="content">
                 <h2>Pet Hotel</h2>
                 <p>
                 Welcome to our Pet Hotel! Here you can schedule an appointment for any of the fexciting pet stays we provide. If you're in need of someone to watch your pet while you're away, look no further as our pet hotel is the perfect place. We have many highly trained caretakers that take lots of pride in what they do and will watch, feed, and play with your animal so you can rest easy while you're away.<p>
