--- a/views/landingpage.handlebars
+++ b/views/landingpage.handlebars
@@ -26,28 +26,28 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="image-main"><img src="./images/dreamstime_xxl_87694876.jpg" alt="" />
+							<div class="image-main"><img src="./images/dreamstime_xxl_87694876.jpg" alt="Assortment of dogs, cats, and other pets sitting calmly" />
 						</div>
 					</section>
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="./images/unsplash-image-s9Tf1eBDFqw.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="./images/unsplash-image-s9Tf1eBDFqw.jpg" alt="Dog lying in pet bed surrounded by plants" /></div><div class="content">
 								<h2>Pet Hotel</h2>
 								<p>If you're in need of someone to watch your pet while you're away, look no further as our pet hotel is the purrrfect place. We have many highly trained caretakers that take lots of pride in what they do and will watch, feed, and play with your animal until you get back.<p>
 								<a href="/hotels" class="button fit primary">Take Me There</a>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="./images/DL2.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="./images/DL2.jpg" alt="Hand combing the top of a small dog's head" /></div><div class="content">
 								<h2>Pet Spa</h2>
 								<p>We also offer pet grooming services at our Pet Spa. Whether you want your animal to get a trim-up, a wash, or a full-on spa treatment, our Pet Spa is the place for you and your fur baby. <p>
 								<a href="/spas" class="button fit primary">Take Me There</a>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="./images/GettyImages-1215180165.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="./images/GettyImages-1215180165.jpg" alt="Assortment of dog toys, treats, and dry kibble" /></div><div class="content">
 								<h2>Pet Products</h2>
 								<p>If you're in need of a restock on pet food, treats, or are looking for a new toy for your pet to enjoy, check out our Pet Products page.<p>
 								<a href="/products" class="button fit primary">Take Me There</a>
