--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -25,7 +25,7 @@
     <!-- Two -->
     <section id="two" class="wrapper alt style2">
         <section class="spotlight">
-			<div class="image"><img src="./images/GettyImages-1215180165.jpg" alt="" /></div><div class="content">
+			<div class="image"><img src="./images/GettyImages-1215180165.jpg" alt="Assortment of dog toys, treats, and dry kibble" /></div><div class="content">
 				<h2>Pet Products</h2>
 				<p>If you're in need of a restock on pet food, treats, or are looking for a new toy for your pet to enjoy, check out our Pet Products page!</p>
 			</div>
