--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -38,7 +38,7 @@
         <h2>Welcome! {{user.name}}, and {{pets.userId}}</h2>
      </div>
      <div class="image-profile-html">
-        <img class="dogo-img" src="./images/DL2.jpg" id="profile-pic" alt="">
+        <img class="dogo-img" src="./images/DL2.jpg" id="profile-pic" alt="Hand combing the top of a small dog's head">
     </div>
     <div class="data">
       <h3>Pet picture</h3>
