--- a/views/spas.handlebars
+++ b/views/spas.handlebars
@@ -26,7 +26,7 @@
     <!-- Two -->
     <section id="two" class="wrapper alt style2">
         <section class="spotlight">
-            <div class="image"><img src="./images/DL2.jpg" alt="" /></div><div class="content">
+            <div class="image"><img src="./images/DL2.jpg" alt="Hand combing the top of a small dog's head" /></div><div class="content">
                 <h2>Pet Spa</h2>
                 <p>Welcome to our Pet Spa! Schedule an appointment for any of our pampering services. Whether it's a shampoo bath, haircut, brushing, or nail clipping... We have it all! <p>
             </div>
